<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">
    <item
        android:id="@+id/main_menu_clear_data"
        android:title="@string/clear_cache" />
    <item
        android:id="@+id/main_menu_repeat_download"
        android:title="@string/synchronize" />
    <!--<item-->
        <!--android:id="@+id/main_menu_notifications"-->
        <!--android:checkable="true"-->
        <!--android:title="@string/notifications" />-->
    <item
        android:id="@+id/main_menu_request_flow"
        android:title="@string/update_tree" />
    <item
        android:id="@+id/main_menu_log_out"
        android:title="@string/quit" />
    <item
        android:id="@+id/menu_search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always"
        android:title="@string/search" />
</menu>