<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vsevolod.swipe.addphoto.activity.AddingActivity"
    tools:showIn="@layout/activity_adding2">

    <ImageView
        android:id="@+id/adding_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/auto_complete_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adding_image_view">

        <AutoCompleteTextView
            android:id="@+id/adding_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/appointment"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:scrollHorizontally="false" />

        <ImageButton
            android:id="@+id/flow_tree_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_file_tree" />
    </RelativeLayout>

    <EditText
        android:id="@+id/adding_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_complete_form"
        android:hint="@string/description"
        android:inputType="textMultiLine|textAutoCorrect"
        android:minHeight="48dp" />

</RelativeLayout>